rectification log of common
Signed-off-by: guowen666 <guowen31@huawei.com>

--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -36,6 +36,7 @@ if (defined(ohos_lite)) {
   }
 
   common_include = [
+    "$dsoftbus_root_path/core/common/dfx/interface/include",
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/interfaces/kits/common",
     "//base/startup/init/interfaces/innerkits/include/syspara",
@@ -95,7 +96,10 @@ if (defined(ohos_lite)) {
         ]
       }
 
-      deps = [ "$hilog_lite_deps_path" ]
+      deps = [
+        "$dsoftbus_dfx_path/log:softbus_dfx_log",
+        "$hilog_lite_deps_path",
+      ]
 
       if (dsoftbus_feature_encrypt == 0) {
         sources += [
@@ -139,6 +143,7 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
       ]
       deps = [
+        "$dsoftbus_dfx_path/log:softbus_dfx_log",
         "$hilog_lite_deps_path",
         "//base/startup/init/interfaces/innerkits:libbegetutil",
         "//third_party/bounds_checking_function:libsec_shared",
@@ -166,6 +171,7 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/include",
       "$softbus_adapter_common/include/OS_adapter_define/linux",
       "$dsoftbus_feature_product_config_path/spec_config",
+      "$dsoftbus_root_path/core/common/dfx/interface/include",
       "$dsoftbus_root_path/core/common/include",
       "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
     ]
@@ -180,6 +186,7 @@ if (defined(ohos_lite)) {
     branch_protector_ret = "pac_ret"
 
     include_dirs = [
+      "$dsoftbus_root_path/core/common/dfx/interface/include",
       "$dsoftbus_root_path/interfaces/kits",
       "$dsoftbus_root_path/interfaces/kits/common",
       "//commonlibrary/c_utils/base/include",
@@ -200,7 +207,10 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/log/softbus_adapter_log.c",
       "$softbus_adapter_common/perf/softbus_adapter_perf.c",
     ]
-    public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
+    public_deps = [
+      "$dsoftbus_dfx_path/log:softbus_dfx_log",
+      "//third_party/bounds_checking_function:libsec_shared",
+    ]
     native_source_path = rebase_path("$dsoftbus_root_path")
 
     ble_enhanced_impl =
