--- a/tests/core/frame/fuzztest/softbusserverstub_fuzzer/BUILD.gn
+++ b/tests/core/frame/fuzztest/softbusserverstub_fuzzer/BUILD.gn
@@ -54,6 +54,7 @@ ohos_fuzztest("SoftBusServerStubFuzzTest") {
   external_deps = [
     "c_utils:utils",
     "ipc:ipc_single",
+    "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
 }
