feat: hidumper to stats and alert Signed-off-by: qinhao <qinhao43@huawei.com>

--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -16,7 +16,8 @@
                 "ohos.permission.PERMISSION_USED_STATS",
                 "ohos.permission.GET_SENSITIVE_PERMISSIONS",
                 "ohos.permission.RECEIVER_STARTUP_COMPLETED",
-                "ohos.permission.MANAGE_LOCAL_ACCOUNTS"
+                "ohos.permission.MANAGE_LOCAL_ACCOUNTS",
+                "ohos.permission.READ_DFX_SYSEVENT"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
