--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -53,7 +53,6 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/interfaces/kits/bus_center",
         "$dsoftbus_root_path/interfaces/kits/transport",
         "$dsoftbus_root_path/interfaces/kits/common",
-        "$dsoftbus_root_path/core/common/dfx/hidumper_adapter/include",
         "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
         "$dsoftbus_root_path/core/common/dfx/interface/include",
         "$softbus_adapter_config/spec_config",
@@ -112,7 +111,6 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_common/include",
         "$softbus_adapter_config/spec_config",
         "$dsoftbus_root_path/interfaces/kits/transport",
-        "$dsoftbus_root_path/core/common/dfx/hidumper_adapter/include",
         "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
         "$dsoftbus_root_path/core/common/dfx/interface/include",
         "//base/security/device_auth/interfaces/inner_api",
@@ -232,6 +230,7 @@ if (defined(ohos_lite)) {
       ":softbus_server.rc",
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common:softbus_utils",
+      "$dsoftbus_root_path/core/common/dfx/hidumper_adapter:softbus_dfx_dump",
       "//third_party/cJSON:cjson",
     ]
     public_deps = [ "$dsoftbus_root_path/core/common/dfx/log:softbus_dfx_log" ]
