更新发现模块DFX审计表单
Signed-off-by: verystone <xudaqing@huawei.com>

--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -73,41 +73,43 @@ DISCOVER_AUDIT:
   FUNC: {type: STRING, desc: current function name }
   HOST_PKG: {type: STRING, desc: host module name }
   BIZ_SCENE: {type: INT32, desc: business scene }
+  RESULT: { type: INT32, desc: deal result }
   ERROR_CODE: { type: INT32, desc: error code }
   AUDIT_TYPE: {type: INT32, desc: audit type }
   BROADCAST_TYPE: { type: INT32, desc: broadcast type }
   BROADCAST_FREQ: { type: INT32, desc: broadcast frequency }
+  ADV_COUNT: { type: INT32, desc: advertise count }
+  ADV_DURATION: { type: INT32, desc: advertise duration }
+  SCAN_INTERVAL: { type: INT32, desc: scan interval }
+  SCAN_WINDOW: { type: INT32, desc: scan window }
+  DISC_MODE: { type: INT32, desc: discovery mode }
+  MEDIUM_TYPE: { type: INT32, desc: medium type }
   ADV_CHANNEL: { type: INT32, desc: adv channel }
   SCAN_TYPE: { type: INT32, desc: scan type }
-  SCAN_CYCLE: { type: STRING, desc: scan duty cycle }
-  SCAN_ID: { type: INT32, desc: scanner id }
-  SCAN_LISTENER_ID: { type: INT32, desc: scanner listhener id }
-  SCAN_INTERVAL: { type: INT32, desc: scanner interval }
-  SCAN_WINDOW: { type: INT32, desc: scanner window }
-  DISC_TYPE: { type: INT32, desc: discovery type }
-  DISC_MODE: { type: INT32, desc: discovery mode }
-  FIRST_DISCOVERY_TIME: { type: INT64, desc: time consuming to discover for the first time }
-  LOCAL_NET_ID: { type: STRING, desc: local device net id }
+  SCAN_ID: { type: INT32, desc: scan id }
+  SCAN_LISTENER_ID: { type: INT32, desc: scan listener id }
   LOCAL_UDID: { type: STRING, desc: local device udid }
-  LOCAL_DEV_TYPE: { type: STRING, desc: local device type }
   LOCAL_DEV_NAME: { type: STRING, desc: local device name }
-  LOCAL_CAPABILITY_BITMAP: { type: INT32, desc: local capability bitmap }
+  LOCAL_DEV_TYPE: { type: STRING, desc: local device type }
   LOCAL_ACCOUNT_HASH: { type: STRING, desc: local account hash }
+  LOCAL_CAPABILITY_BITMAP: { type: INT32, desc: local capability bitmap }
   LOCAL_CUST_DATA: { type: STRING, desc: local cust data }
+  LOCAL_IP: { type: STRING, desc: local device ip }
+  LOCAL_PORT: { type: INT32, desc: local device port }
+  LOCAL_BR_MAC: { type: STRING, desc: local device br mac }
+  LOCAL_BLE_MAC: { type: STRING, desc: local device ble mac }
+  PEER_UDID: { type: STRING, desc: peer device udid }
+  PEER_DEV_NAME: { type: STRING, desc: peer device name }
+  PEER_DEV_TYPE: { type: STRING, desc: peer device type }
+  PEER_ACCOUNT_HASH: { type: STRING, desc: peer account hash }
+  PEER_CAPABILITY_BITMAP: { type: INT32, desc: peer capability bitmap }
+  PEER_CUST_DATA: { type: STRING, desc: peer cust data }
   PEER_IP: { type: STRING, desc: peer device ip }
+  PEER_PORT: { type: INT32, desc: peer device port }
   PEER_BR_MAC: { type: STRING, desc: peer device br mac }
   PEER_BLE_MAC: { type: STRING, desc: peer device ble mac }
-  PEER_WIFI_MAC: { type: STRING, desc: peer device wifi mac }
-  PEER_PORT: { type: STRING, desc: peer device port }
-  PEER_UDID: { type: STRING, desc: peer device udid }
-  PEER_NET_ID: { type: STRING, desc: peer device net id }
-  PEER_DEV_TYPE: { type: STRING, desc: peer device type }
-  PEER_DEV_NAME: { type: STRING, desc: peer device name }
-  PEER_CAPABILITY_BITMAP: { type: INT32, desc: peer capability bitmap }
-  PEER_ACCOUNT_HASH: { type: STRING, desc: peer account hash }
-  PEER_CUST_DATA: { type: STRING, desc: peer cust data }
   ERR_MSG: { type: STRING, desc: error message }
-  EXTRA: { type: STRING, desc: ectra information }
+  ADDITIONAL_INFO: { type: STRING, desc: additional information }
 
 BUSCENTER_BEHAVIOR:
   __BASE: {type: BEHAVIOR, level: MINOR, desc: bus center behavior }
