--- a/core/discovery/disc.gni
+++ b/core/discovery/disc.gni
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -13,11 +13,12 @@
 
 import("../../core/discovery/ble/disc_ble.gni")
 import("../../core/discovery/coap/disc_coap.gni")
+import("../../core/discovery/event_manager/disc_event_manager.gni")
 import("../../dsoftbus.gni")
 
-disc_server_src = ble_discovery_src + disc_coap_src
-disc_server_inc = ble_discovery_inc + disc_coap_inc
-disc_server_deps = ble_discovery_deps + disc_coap_deps
+disc_server_src = ble_discovery_src + disc_coap_src + disc_event_manager_src
+disc_server_inc = ble_discovery_inc + disc_coap_inc + disc_event_manager_inc
+disc_server_deps = ble_discovery_deps + disc_coap_deps + disc_event_manager_deps
 disc_server_external_deps = []
 disc_server_src += [
   "$dsoftbus_root_path/core/discovery/manager/src/disc_manager.c",
