Implement blocking and restoring WIFI scanning in HML
Signed-off-by: jiazhenyu <jiazhenyu1@huawei.com>

--- a/adapter/default_config/feature_config/small/config.gni
+++ b/adapter/default_config/feature_config/small/config.gni
@@ -46,5 +46,5 @@ declare_args() {
   dsoftbus_feature_ex_kits = false
   dsoftbus_feature_proxy_file = true
 
-  dsoftbus_feature_wifi_notify = true
+  dsoftbus_feature_wifi_notify = false
 }
