fix:add permission
Signed-off-by: Lotol <linxiangzhi@huawei.com>

--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -14,7 +14,8 @@
             "permission" : [
                 "ohos.permission.PERMISSION_USED_STATS",
                 "ohos.permission.GET_SENSITIVE_PERMISSIONS",
-                "ohos.permission.RECEIVER_STARTUP_COMPLETED"
+                "ohos.permission.RECEIVER_STARTUP_COMPLETED",
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
