fix:add permission
Signed-off-by: Lotol <linxiangzhi@huawei.com>

--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -17,7 +17,8 @@
                 "ohos.permission.GET_SENSITIVE_PERMISSIONS",
                 "ohos.permission.RECEIVER_STARTUP_COMPLETED",
                 "ohos.permission.MANAGE_LOCAL_ACCOUNTS",
-                "ohos.permission.READ_DFX_SYSEVENT"
+                "ohos.permission.READ_DFX_SYSEVENT",
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
