Description:Application-level binding Feature or Bugfix:Feature Binary Source:No
Signed-off-by: sun-jiashun-123 <sunjiashun@huawei.com>

--- a/core/authentication/authentication.gni
+++ b/core/authentication/authentication.gni
@@ -13,6 +13,10 @@
 
 import("../../dsoftbus.gni")
 import("../common/dfx/dsoftbus_dfx.gni")
+device_profile_common_path =
+    "//foundation/deviceprofile/device_info_manager/common"
+device_profile_interfaces_path =
+    "//foundation/deviceprofile/device_info_manager/interfaces"
 AUTH_SERVER_DEFINES = []
 if (dsoftbus_feature_auth_account == true) {
   AUTH_SERVER_DEFINES += [ "AUTH_ACCOUNT" ]
@@ -106,10 +110,10 @@ if (defined(ohos_lite)) {
 } else {
   auth_server_inc += [
     "//base/security/device_auth/interfaces/inner_api",
-    "//foundation/deviceprofile/device_info_manager/interfaces/innerkits/core/include",
-    "//foundation/deviceprofile/device_info_manager/common/include/interfaces/",
-    "//foundation/deviceprofile/device_info_manager/common/include/constants",
-    "//foundation/deviceprofile/device_info_manager/common/include/utils",
+    "${device_profile_interfaces_path}/innerkits/core/include",
+    "${device_profile_common_path}/include/interfaces/",
+    "${device_profile_common_path}/include/constants",
+    "${device_profile_common_path}include/utils",
   ]
   auth_server_src +=
       [ "$authentication_path/src/auth_hichain_system_ability_monitor.cpp" ]
