--- a/core/common/dfx/hidumper_adapter/BUILD.gn
+++ b/core/common/dfx/hidumper_adapter/BUILD.gn
@@ -79,6 +79,10 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/components/nstackx/nstackx_util/interface",
       "$dsoftbus_root_path/components/nstackx/nstackx_ctrl/interface",
       "$dsoftbus_root_path/core/bus_center/utils/include",
+      "$dsoftbus_root_path/core/authentication/interface",
+      "$dsoftbus_root_path/core/bus_center/interface",
+      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+      "$dsoftbus_root_path/core/connection/interface",
       "//third_party/cJSON",
       "//third_party/bounds_checking_function/include",
     ]
