--- a/core/connection/wifi_direct/wifi_direct.gni
+++ b/core/connection/wifi_direct/wifi_direct.gni
@@ -34,7 +34,6 @@ if (dsoftbus_feature_conn_p2p == true &&
     softbus_communication_wifi_feature == true) {
   wifi_direct_connection_src += [
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_coexist_rule.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_initiator.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_manager.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_ip_manager.cpp",
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_negotiator.c",
@@ -69,7 +68,7 @@ if (dsoftbus_feature_conn_p2p == true &&
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_network_utils.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_timer_list.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_work_queue.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_utils.c",
+    "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_utils.cpp",
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_anonymous.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_perf_recorder.c",
   ]
@@ -85,6 +84,7 @@ if (dsoftbus_feature_conn_p2p == true &&
     wifi_direct_connection_inc +=
         [ "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single" ]
     wifi_direct_connection_src += [
+      "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_initiator.c",
       "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_decision_center.c",
       "$dsoftbus_root_path/core/connection/wifi_direct/processor/wifi_direct_processor_factory.c",
       "$dsoftbus_root_path/core/connection/wifi_direct/entity/wifi_direct_entity_factory.c",
@@ -98,13 +98,17 @@ if (dsoftbus_feature_conn_p2p == true &&
     ]
   }
 
-  wifi_direct_connection_external_deps += [ "wifi:wifi_sdk" ]
+  wifi_direct_connection_external_deps += [
+    "init:libbegetutil",
+    "wifi:wifi_sdk",
+  ]
 } else {
   wifi_direct_connection_src += [
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_initiator_virtual.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_manager_virtual.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/channel/default_negotiate_channel_virtual.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/channel/fast_connect_negotiate_channel_virtual.c",
+    "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_utils_virtual.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/net_manager_adapter.cpp",
     "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/wifi_direct_p2p_adapter_virtual.c",
   ]
