--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -18,7 +18,14 @@
                 "ohos.permission.RECEIVER_STARTUP_COMPLETED",
                 "ohos.permission.MANAGE_LOCAL_ACCOUNTS",
                 "ohos.permission.READ_DFX_SYSEVENT",
-                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED"
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
+                "ohos.permission.MANAGE_SECURE_SETTINGS",
+                "ohos.permission.MANAGE_VPN",
+                "ohos.permission.MANAGE_NET_STRATEGY",
+                "ohos.permission.INTERNET",
+                "ohos.permission.GET_NETWORK_STATS",
+                "ohos.permission.GET_NETWORK_INFO",
+                "ohos.permission.CONNECTIVITY_INTERNAL"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
